# nameless-chessbot

./: .clang-format  .gitignore  .gitmodules  FLAGS  LICENSE  Makefile  README.markdown  all.do  bb-tablegen-col.c  bb-tablegen-diag315.c  bb-tablegen-diag45.c  bb-tablegen-king.c  bb-tablegen-knight.c  bb-tablegen-pawn.c  bb-tablegen-row.c  bbvisualizer.c  bistromath-board.c  bitboard-test.c  bitboard.c  bitboard.h  bitscan.h  build.sh  clean.do  default.o.do  evaluate.c  evaluate.h  global.h  ideas.txt  main.c  meson.build  move-generated-generator.sh  move.c  move.h  move.txt  moveiter.c  moveiter.h  movelist.c  movelist.h  perft.c  perft.do  (+15 more)
OpenBench/: Makefile
generators/evaluate/: front_spans.c  generate.sh
generators/move/: col.c  diag315.c  diag45.c  generate.sh  king.c  knight.c  pawn.c  row.c
investigate-game/: fullgame.xboard  partial.xboard
nn/: cmd.txt  meson.build  nnue.bin.txt  training-d9.txt.zst.txt
src/: bitboard.c  bitboard.h  bitops.h  bitscan.h  config.h  console.c  evaluate.c  evaluate.h  history.c  history.h  incbin.h  meson.build  move.c  move.h  moveiter.c  moveiter.h  movemagic-consts.h  movemagic.c  movemagic.h  mt19937.h  mt19937ar.c  nnue-training-data.c  nnue.c  nnue.h  perft.c  perftfn.c  perftfn.h  search-perf.c  search.c  search.h  see.c  see.h  statelist.c  statelist.h  stress.c  test-perft.c  test-search.c  test-see.c  test.c  testlib.h  (+6 more)
